Added db classes. Set up demo libgdx. Added IO service

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
             </descriptorRefs>
             <archive>
               <manifest>
-                <mainClass>com.mcspaskiy.App</mainClass>
+                <mainClass>com.mcspaskiy.GameLauncher</mainClass>
               </manifest>
             </archive>
           </configuration>
