--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mcspaskiy</groupId>
-  <artifactId>ITEA_PRACTICE</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>runner</artifactId>
+  <version>1.0</version>
 
   <name>ITEA_PRACTICE</name>
   <!-- FIXME change it to the project's website -->
@@ -14,10 +14,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.11</maven.compiler.source>
-    <maven.compiler.target>1.11</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-
 
   <dependencies>
     <dependency>
@@ -49,8 +48,6 @@
       <version>1.9.12</version>
       <classifier>natives-desktop</classifier>
     </dependency>
-
-
   </dependencies>
 
   <build>
