--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.mcspaskiy</groupId>
-  <artifactId>ITEA_PRACTICE</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>tablutserv</artifactId>
+  <version>1.0</version>
 
   <name>ITEA_PRACTICE</name>
   <!-- FIXME change it to the project's website -->
